自定义starter 源码见CleiAutoConfiguration